# Repo2Txt

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  readme.md  repo2txt.py  repo2txt_legacy.py  repo2txt_old.py  repototxt.py
.archive/: file_selector_agent_demo_original.py
.archive/src/repo2txt/: __main__.py  cli.py
.archive/src/repo2txt/adapters/: __init__.py  base.py  github.py  local.py
.archive/src/repo2txt/ai/: console_chat.py  file_selector_agent.py  state.py
.archive/src/repo2txt/core/: __init__.py  analyzer.py  models.py
.archive/src/repo2txt/utils/: console.py  console_base.py  encodings.py  file_filter.py  logging_config.py
.claude/prompt/: double_check.md  new_plan.md
.cursor/rules/: create-cursor-rules.mdc  ideate.mdc  installing-packages.mdc  logging.mdc  task-list.mdc
.github/workflows/: claude.yml
docs/: ARCHITECTURE.md  SYSTEM_DESIGN.md
src/repo2txt/: __init__.py  __main__.py  cli.py
src/repo2txt/adapters/: __init__.py  base.py  github.py  local.py
src/repo2txt/ai/: __init__.py  adapter_manager.py  agent_session.py  chat_orchestrator.py  cli.py  command_handler.py  config.py  console_chat.py  file_selector_agent.py  llm.py  prompts.py  qwen_utils.py  state.py  tools.py
src/repo2txt/ai/adapter/: __init__.py  base.py  factory.py  openai_adapter.py  vllm_adapter.py
src/repo2txt/ai/models/: capabilities.py  common.py
src/repo2txt/core/: __init__.py  analyzer.py  file_analyzer.py  models.py  tokenizer.py
src/repo2txt/utils/: __init__.py  console.py  console_base.py  encodings.py  file_filter.py  logging_config.py  path_utils.py  tree_builder.py
tests/: __init__.py  conftest.py  test_adapters.py  test_ai_components.py  test_analyzer.py  test_file_analyzer.py  test_imports.py  test_models.py  test_tokenizer.py  test_tree_building.py
tests_integration/: README.md  devstral_evaluation.py  model_evaluation_toolkit.py  test_ai_adapters.py  test_logging_demo.py
tests_integration/vllm/: test_qwen3.py
